--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-POSTGRES_HOST=127.0.0.1
+POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=neotericpassword
-POSTGRES_DATABASE=firstdb
+POSTGRES_USER=admin
+POSTGRES_PASSWORD=admin
+POSTGRES_DB=nestjs
+PORT=5000
